# Mazes-in-C

./: .clang-format  .gitignore  CMakeLists.txt  Maze1.maze  Maze2.maze  Maze4.maze  dump.txt  maze.maze  maze4.maze  maze5.maze  test2.maze  todo.txt
src/: aabb.c  aabb.h  backtracking.c  backtracking.h  cell.c  cell.h  create_maze.c  create_maze.h  drawCells.c  drawCells.h  draw_cells.c  draw_cells.h  kruskals.c  kruskals.h  main.c  maze_stats.h  prims.c  prims.h  rbTree.c  rbTree.h  rb_tree.c  rooms.c  rooms.h  rooms_bvh.c  rooms_bvh.h  sets.c  sets.h
src/file/: export.c  export.h  load.c  load.h
src/maze_gen/: backtracking.c  backtracking.h  cell.c  cell.h  dead_end.c  dead_end.h  game_map.c  game_map.h  hybrid.c  hybrid.h  kruskals.c  kruskals.h  maze_state.h  maze_stats.h  prims.c  prims.h  sets.c  sets.h
src/noise/: noise.c  noise.h  vec2.c  vec2.h
src/ui/: clay_renderer_SDL3.c  config_nk.h  init_font.c  init_font.h  init_nk.c  init_nk.h  layout_nk.c  layout_nk.h  ui_state.c  ui_state.h
src/utils/: grid_utils.c  grid_utils.h  rand_utils.c  rand_utils.h  rb_tree.c
test/: Tests_aabb.c  Tests_aabb.h  Tests_drawCells.c  Tests_drawCells.h  Tests_draw_cells.c  Tests_rbTree.c  Tests_rbTree.h  Tests_rb_tree.c  Tests_rb_tree.h  Tests_sets.c  Tests_sets.h  main.c  tests.h
test/myAssert/: myAssert.h
test/noise/: Tests_noise.c  Tests_noise.h
test/utils/: Test_grid_utils.c  Test_grid_utils.h  Tests_grid_utils.c  Tests_grid_utils.h
